<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Notificaciones2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="content_title">Content Title</string>
    <string name="content_text">Content Text</string>
    <string name="ticker">El ticker</string>
    <string name="content_info">Content Info</string>
    <string name="vibrations"># de vibraciones</string>
    <string name="vibration_length">Duración de la vibración</string>
    <string name="autocancel">Es autocancelable?</string>
    <string name="notify">Notificar</string>
    <string name="empty">-vacío-</string>
    
    
    <string name="button1">Opción 1</string>
    <string name="button2">Opción 2</string>
    <string name="button3">Opción 3</string>

    <string-array name="available_vibrations">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="title_activity_second">SecondActivity</string>

</resources>
